tigergraph-server/3.9/intro/release-process.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)[Next](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.9/release-notes/)
  *     * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [Get Started](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/)
      * Installation
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/docker)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/cloud-images/gcp)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/linux)
          * [System Requirements](https://docs.tigergraph.com/tigergraph-server/3.9/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/3.9/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/3.9/installation/post-install-check)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.9/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/3.9/installation/change-port)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.9/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/using-a-remote-gsql-client)
        * [GSQL Shell (Web)](https://docs.tigergraph.com/tigergraph-server/3.9/gsql-shell/web)
    * [Create Database](https://docs.tigergraph.com/tigergraph-server/3.9/getting-started/database-definition)
      * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
  *     * [Load Data](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-local-files)
      * [Load from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-cloud)
      * [Load from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-warehouse)
      * [Load from External Kafka](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/load-from-kafka)
      * [Load DataFrames from Spark](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/spark-connection-via-jdbc-driver)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/manage-data-source)
      * [Stream from External Kafka (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/data-loading/data-streaming-connector/kafka)
  *     * Advanced Topics
      * [System Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-with-gadmin)
        * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/memory-management)
        * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/workload-management)
        * [Metrics Reporting](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/system-metrics)
        * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/ldap)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/user-management)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/role-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/access-control-model)
          * [Access Control Lists (ACLs)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/acl-management)
          * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.9/user-access/vlac)
      * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/backup-cluster)
        * [Restore a Database Backup from the Same Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/restore-backup-same)
        * [Restore a Database Backup from Another Cluster](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/cross-cluster-backup)
        * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/database-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.9/backup-and-restore/gbar-legacy)
      * Cluster and HA Management
        * Cluster Resizing
          * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/expand-a-cluster)
          * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/shrink-a-cluster)
          * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/repartition-a-cluster)
          * [Cluster Replace](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
        * [Cross-Region Replication (CRR)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-index)
          * [Set up CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/set-up-crr)
          * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/fail-over)
          * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/troubleshooting)
          * [CRR FAQ](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/crr-faq)
        * [High Availability (HA)](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-overview)
          * [Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-cluster)
          * [GSQL Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-gsql-server)
          * [Application Server Support](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/ha-for-application-server)
          * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/cluster-commands)
          * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.9/cluster-and-ha-management/remove-failed-node)
      * [Architecture](https://docs.tigergraph.com/tigergraph-server/3.9/intro/internal-architecture)
        * [MultiGraph Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/multigraph-overview)
        * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/transaction-and-acid)
        * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.9/intro/continuous-availability-overview)
      * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/)
        * [Kubernetes Operator (Preview)](https://docs.tigergraph.com/tigergraph-server/3.9/kubernetes/k8s-operator/)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.9/security/)
      * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/3.9/security/audit-privileged-actions)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.9/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.9/security/file-output-policy)
      * [Configuring Login Protection](https://docs.tigergraph.com/tigergraph-server/3.9/security/login-protection)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.9/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.9/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.9/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.9/API/json-catalog)
      * [Upsert data to graph](https://docs.tigergraph.com/tigergraph-server/3.9/API/upsert-rest)
  *     * Additional Resources
      * Troubleshooting and FAQs
        * [Knowledge base and FAQs](https://kb.tigergraph.com/)
        * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/system-administration-faqs)
        * [Log Files](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/log-files)
          * [Gathering Log Information with gcollect](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/gcollect)
          * [Audit Logs](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/audit-logs)
          * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/elk-filebeat)
        * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.9/troubleshooting/troubleshooting-guide)
      * References
        * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.9/reference/configuration-parameters)
        * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.9/reference/return-codes)
        * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.9/reference/list-of-privileges)
        * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.9/reference/ports)
        * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.9/reference/glossary)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.9/reference/patents-and-third-party-software)
        * [Legacy Version Documentation](https://docs.tigergraph.com/tigergraph-server/3.9/additional-resources/legacy-tg-versions)
        * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.9/intro/comparison-of-editions)
        * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)


TigerGraph DB 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
  * Additional Resources
  * References
  * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.9/modules/intro/pages/release-process.adoc)
### Contents
  * [Versions and Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_versions_and_support)
  * [LTS Version](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_lts_version)
  * [Preview Version](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_preview_version)
  * [Release Numbering and Terminology](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering_and_terminology)
  * [Version vs. Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_version_vs_release)
  * [Release Numbering](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering)
  * [Deliverables](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_deliverables)
  * [Feature Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_feature_release)
  * [Maintenance Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_maintenance_release)
  * [One-Off patches](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_one_off_patches)
  * [Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_support)
  * [Managed Service](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_managed_service)


# TigerGraph Release And Patch Process
### Contents
  * [Versions and Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_versions_and_support)
  * [LTS Version](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_lts_version)
  * [Preview Version](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_preview_version)
  * [Release Numbering and Terminology](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering_and_terminology)
  * [Version vs. Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_version_vs_release)
  * [Release Numbering](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering)
  * [Deliverables](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_deliverables)
  * [Feature Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_feature_release)
  * [Maintenance Release](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_maintenance_release)
  * [One-Off patches](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_one_off_patches)
  * [Support](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_support)
  * [Managed Service](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_managed_service)


Updated March 6, 2023
## [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_versions_and_support)Versions and Support
TigerGraph is committed to providing the most scalable, most reliable, most secure, and highest performing enterprise-grade graph database.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_lts_version)LTS Version
To provide users with a long and stable product lifecycle, we designate certain versions of the product as LTS (Long Term Support) versions. We commit to providing 24 months of maintenance releases, critical issue patches, and technical [product support](https://www.tigergraph.com/support-policy) for LTS versions, starting from their initial release. We expect to release up to two (2) new LTS versions per year.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_preview_version)Preview Version
In between LTS versions, we will release Preview versions that introduce previews of new features. Preview versions enable users to get an early look at upcoming features and to provide feedback to TigerGraph. Preview versions are not covered by the [Product Support Policy](https://www.tigergraph.com/support-policy) and therefore are not suitable for production use.
TigerGraph Cloud will offer users a choice of either the latest LTS version or the latest Preview version.
In summary, TigerGraph has the following types of Versions and Releases:
  1. LTS Version
     * Supported for 24 months after initial release
     * Will receive Maintenance releases and critical patches
  2. Preview Version
     * Introduces early versions of new features
     * Not covered by Support Policy


## [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering_and_terminology)Release Numbering and Terminology
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_version_vs_release)Version vs. Release
**Version** refers to a feature set, not a particular release. A Version comprises an initial release containing new features, plus its subsequent Maintenance releases. So, a version may include a series of releases.
  * For example, Version 3.6 encompasses release 3.6.0, 3.6.1, and any future 3.6.x releases. Release 3.7.0 starts Version 3.7.
  * Our documentation is organized by Version.


### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_release_numbering)Release Numbering
TigerGraph uses a 3-part numbering scheme: `<Generation>.<Feature>.<Maintenance>`
**Generation and Feature Releases**
The initial release of either an LTS Version or a Preview Version is a Feature Release. Every year or two, the changes are significant enough that we designate the new version as a new Generation.
  * If it is a new generation, we increment `<Generation>` and reset `<Feature>.<Maintenance>` to 0.0. Upgrading may take some migration effort, and some features may not be backwardly compatible.
  * If it is a Feature Release within the same generation, then we increment `<Feature>` and reset `<Maintenance>` to 0. We strive for backward compatibility so that existing applications built on the previous feature version will continue to work without modification.


**Maintenance Release**
While we work hard to release high-quality, well-tested software, some bugs or unexpected behaviors do occur. Maintenance releases provide bug fixes, security patches, performance improvements, and other improvements. They are not intended to introduce new features, unless the features are directly related to quality and stability improvement. A maintenance release keeps `<generation>.<feature>` the same and increments `<maintenance>`. LTS versions will have maintenance releases for 2 years.
For example, in the release **3.6.1** , the generation is 3, the feature version is 3.6, and the patch version is 1.
**Patch**
TigerGraph may provide a patch for an existing release that may or may not impact all customers. These are used to address security vulnerabilities or critical bugs in a timely manner.
Our documentation (found at [docs.tigergraph.com](https://docs.tigergraph.com/https://docs.tigergraph.com/)) is updated with a new branch when the major or minor version number changes. We do not provide a new documentation branch for patch releases. Instead, we may update the corresponding feature version’s documents.
## [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_deliverables)Deliverables
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_feature_release)Feature Release
A feature release is a planned product roadmap event. In addition to the software, the following documentation deliverables accompany the release:
  * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.9/release-notes/) section included in the TigerGraph online documentation.
  * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade) section included in the TigerGraph online documentation.
  * A complete new branch in the TigerGraph online documentation for that product version.


**Notification:** Feature releases will be announced on our documentation website. TigerGraph’s Customer Success team will also proactively share the release notes with existing customers.
**Upgrade Support:** Customers using an older version should refer to the upgrade section of the online documentation and should [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/) for assistance.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_maintenance_release)Maintenance Release
A Maintenance release provides fixes and improvements for a particular feature version. The release cycle varies, depending on the number and severity of issues that have been detected and addressed.
**Notification:** Maintenance releases are announced on our documentation website in a subsection of the Release Notes. TigerGraph’s Customer Success team will proactively share the release notes with existing customers.
**Upgrade Support:** Users should refer to the [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.9/installation/upgrade) section of the documentation. Depending on the urgency of the patch, our Customer Success team may reach out to customers to discuss upgrading.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_one_off_patches)One-Off patches
In some instances, a One-Off patch is released to address critical security issues or critical bugs. Unlike Maintenance releases, a one-off patch is usually an urgent point fix, meaning that it will not wait for other fixes.
One-off patches are released as the situation demands. They could be universal, applicable to all customers, or specific, applicable to a handful of customers who have deployed a TigerGraph product under a certain environment.
**Notification:** As a One-Off patch is being developed, the Customer Success team will reach out to the affected customers to inform them of the discovered issue and the immediate remediation plan while the patch is under development.
**Application of the patch:** After the patch is developed and has gone through the release certification process, the technical support team will email customers instructions on downloading and applying the patch.
**Post-release:** The patch will be merged in to future maintenance and feature releases. Given the additional time before those releases, the patch may be replaced with an improved solution to the problem.
### [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_support)Support
Customers who need assistance can open a support ticket at [TigerGraph’s ZenDesk Portal](https://tigergraph.zendesk.com/hc/en-us/).
## [](https://docs.tigergraph.com/tigergraph-server/3.9/intro/release-process#_managed_service)Managed Service
For customers who subscribe to TigerGraph’s Managed Service, our Cloud Engineering team will apply upgrades for backward compatible changes or One-Off patches transparently when the release is available or during the customer-notified system maintenance window (in situations requiring system downtime).
For releases with non-backward compatible changes, the TigerGraph Customer Success team will reach out to customers to discuss opt-out or opt-in choices.
Should the customer choose to opt-in, our Cloud Engineering team will coordinate and perform the upgrade for the customer.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


